# server

./: CMakeLists.txt  CMakeUserPresets.json  build.sh  vcpkg-configuration.json  vcpkg.json
.cache/clangd/index/: client.cpp.A822013B848AEB4A.idx  client.hpp.DCDC8FD578204A82.idx  game_data.cpp.D4850EEF67409A67.idx  game_data.hpp.0DF789BAD0CF80D2.idx  main.cpp.68C0F0E403DCDF60.idx  server.cpp.C5B1804978C48314.idx  server.hpp.D8809A1EDFA4F507.idx
include/: CMakeLists.txt  client.hpp  foo.hpp  game_data.hpp  server.hpp
src/: CMakeLists.txt  client.cpp  foo.cpp  game_data.cpp  main.cpp  server.cpp
